--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,11 @@
         "name": "next"
       }
     ],
+    "baseUrl": "./src/app", 
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["*"]
+    },
+    "ignoreDeprecations": "5.0"
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
